@@ -1,18 +1,0 @@
-# where is the PD installation including source code?
-PDPATH=/Applications/Pd-0.38-0test10.app/Contents/Resources
-
-# where is the PD executable?
-PDBIN=$(PDPATH)/bin/pd
-
-# where should the external be installed?
-INSTPATH=$(PDPATH)/extra
-
-# where do the flext headers and libraries reside?
-FLEXTPATH=$(PDPATH)/flext
-
-# where should the external be built?
-OUTPATH=pd-darwin
-
-# user defined compiler flags
-# (check if they match your system!)
-OFLAGS=-O2 -mcpu=G4 -malign-natural -maltivec -faltivec
